ops/kind/kind-host.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: dockerhost
subsets:
  - addresses:
      - ip: 172.17.0.1 # this is the gateway IP in the "bridge" docker network
---
apiVersion: v1
kind: Service
metadata:
  name: dockerhost
spec:
  clusterIP: None
