ops/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /dockerhost
            backend:
              service:
                name: dockerhost
                port:
                  number: 8080
